# rorumall

./: .gitignore  Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: api_client.rs  app.rs  auth_session.rs  client_keys.rs  lib.rs  main.rs  navigation.rs  runtime.rs  single_instance.rs  storage.rs  theme.rs
crates/client/src/components/: mod.rs
crates/client/src/components/messages/: article_item.rs  memo_item.rs  message_input.rs  message_item.rs  mod.rs  reply_thread.rs
crates/client/src/components/profile/: mod.rs  presence_indicator.rs  presence_selector.rs  privacy_settings.rs  profile_card.rs  profile_edit_form.rs
crates/client/src/components/ui/: attachment_display.rs  avatar_uploader.rs  channel_list.rs  connection_status.rs  create_channel_modal.rs  create_group_modal.rs  file_picker.rs  group_card.rs  group_list.rs  group_settings.rs  mod.rs  role_editor.rs
crates/client/src/stores/: auth.rs  groups.rs  members.rs  messages.rs  mod.rs  presence.rs  profile.rs
crates/client/src/views/: article_editor.rs  channel_view.rs  home.rs  login.rs  mod.rs  profile_view.rs  register.rs
crates/client/src/ws/: connection.rs  manager.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  lib.rs  models.rs  protocol.rs
