[workspace]
members = ["crates/shared", "crates/client"]
resolver = "2"

[workspace.dependencies]
rinch = { path = "../rinch/crates/rinch", default-features = false }
rinch-core = { path = "../rinch/crates/rinch-core" }
rinch-tabler-icons = { path = "../rinch/crates/rinch-tabler-icons" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots", "connect"], default-features = false }
futures-util = "0.3"
pulldown-cmark = "0.12"
ammonia = "4.0"
url = "2.5"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
wgpu = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
wgpu-core = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
wgpu-hal = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
wgpu-types = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }
naga = { git = "https://github.com/joeleaver/wgpu-fork", branch = "rinch-patch" }

# Size-optimized release profile
[profile.small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
